package_daemon: Actually return transaction errors instead of OK always.

This "fixes" #10959, though now the varying potential causes of that
will now print actual errors earlier instead of the error message
in that ticket.